--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
+    "sass": "^1.77.8",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1"
   },
