--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+REACT_APP_PAY_API_USERNAME=r-beancode-api
+REACT_APP_PAY_API_PASSWORD=021201Ee
+
 NEXT_PUBLIC_PAY_API_USERNAME=r-beancode-api
 NEXT_PUBLIC_PAY_API_PASSWORD=021201Ee
