--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "beancode-frontend-nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "dotenv": "^16.4.4",
-    "next": "14.2.5",
-    "next-sitemap": "^4.2.3",
-    "react": "^18.2.0",
-    "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.49.3",
-    "react-input-mask": "^2.0.4",
-    "react-redux": "^8.1.1",
-    "react-slick": "^0.29.0",
-    "redux": "^5.0.1",
-    "redux-persist": "^6.0.0",
-    "redux-toolkit": "^1.1.2",
-    "sass": "^1.77.8",
-    "scss": "^0.2.4",
-    "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-helmet": "^6.1.11",
-    "@types/react-input-mask": "^3.0.5",
-    "@types/react-slick": "^0.23.13",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "react-refresh": "^0.14.0",
-    "terser": "^5.27.2",
-    "typescript": "^5.0.2"
-  }
+	"name": "beancode-frontend-nextjs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next-sitemap",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
+		"dotenv": "^16.4.4",
+		"next": "14.2.5",
+		"next-sitemap": "^4.2.3",
+		"react": "^18.2.0",
+		"react-countdown": "^2.3.5",
+		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
+		"react-hook-form": "^7.49.3",
+		"react-input-mask": "^2.0.4",
+		"react-redux": "^8.1.1",
+		"react-slick": "^0.29.0",
+		"redux": "^5.0.1",
+		"redux-persist": "^6.0.0",
+		"redux-toolkit": "^1.1.2",
+		"sass": "^1.77.8",
+		"scss": "^0.2.4",
+		"sharp": "^0.34.4",
+		"slick-carousel": "^1.8.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20.11.19",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@types/react-helmet": "^6.1.11",
+		"@types/react-input-mask": "^3.0.5",
+		"@types/react-slick": "^0.23.13",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"react-refresh": "^0.14.0",
+		"terser": "^5.27.2",
+		"typescript": "^5.0.2"
+	}
 }
