--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,24 +8,20 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
-
       - name: Deploy to server
-        if: success()
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
+          timeout: 600s
+          command_timeout: 600s
           script: |
             set -e 
             cd /home/beancode/beancode-frontend-nextjs
@@ -34,8 +30,8 @@ jobs:
             git fetch origin main
             git reset --hard origin/main
 
-            # Устанавливаем зависимости
-            npm ci
+            # Устанавливаем зависимости (с флагом для ускорения)
+            npm ci --prefer-offline --no-audit
 
             # Создаем папку для логов если не существует
             mkdir -p logs
