--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,52 +14,53 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Deploy to server
+      - name: Update code on server
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          timeout: 600s
-          command_timeout: 600s
+          timeout: 60s
+          command_timeout: 60s
           script: |
-            set -e
-            set -x
-
-            echo "=== Начало деплоя: $(date) ==="
-
             cd /home/beancode/beancode-frontend-nextjs
-            echo "=== Переход в директорию завершен: $(date) ==="
-
-            # Обновляем код
-            echo "=== Начало git fetch: $(date) ==="
             git fetch origin main
-            echo "=== Git fetch завершен: $(date) ==="
-
-            echo "=== Начало git reset: $(date) ==="
             git reset --hard origin/main
-            echo "=== Git reset завершен: $(date) ==="
 
-            # Устанавливаем зависимости
-            echo "=== Начало npm ci: $(date) ==="
-            npm ci --prefer-offline --no-audit --loglevel=error
-            echo "=== npm ci завершен: $(date) ==="
+      - name: Install dependencies
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          timeout: 300s
+          command_timeout: 300s
+          script: |
+            cd /home/beancode/beancode-frontend-nextjs
+            npm ci --prefer-offline --no-audit
 
-            # Создаем папку для логов если не существует
+      - name: Build project
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          timeout: 300s
+          command_timeout: 300s
+          script: |
+            cd /home/beancode/beancode-frontend-nextjs
             mkdir -p logs
-            echo "=== Создание папки logs завершено: $(date) ==="
-
-            # Собираем проект
-            echo "=== Начало npm run build: $(date) ==="
             npm run build
-            echo "=== npm run build завершен: $(date) ==="
 
-            # Перезапускаем PM2 процесс
-            echo "=== Начало pm2 restart: $(date) ==="
+      - name: Restart PM2
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          timeout: 60s
+          command_timeout: 60s
+          script: |
+            cd /home/beancode/beancode-frontend-nextjs
             pm2 restart beancode-frontend-nextjs || pm2 start pm2.config.cjs
-            echo "=== pm2 restart завершен: $(date) ==="
-
-            # Проверяем статус
-            echo "=== Проверка pm2 status: $(date) ==="
             pm2 status
-            echo "=== Деплой завершен: $(date) ==="
