--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,52 +15,56 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Update code on server
-        uses: appleboy/ssh-action@v0.1.10
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           timeout: 60s
           command_timeout: 60s
-          script: |
-            cd /home/beancode/beancode-frontend-nextjs
-            git fetch origin main
+          debug: true
+          command: |
+            cd /home/beancode/beancode-frontend-nextjs && \
+            git fetch origin main && \
             git reset --hard origin/main
 
       - name: Install dependencies
-        uses: appleboy/ssh-action@v0.1.10
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           timeout: 300s
           command_timeout: 300s
-          script: |
-            cd /home/beancode/beancode-frontend-nextjs
+          debug: true
+          command: |
+            cd /home/beancode/beancode-frontend-nextjs && \
             npm ci --prefer-offline --no-audit
 
       - name: Build project
-        uses: appleboy/ssh-action@v0.1.10
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           timeout: 300s
           command_timeout: 300s
-          script: |
-            cd /home/beancode/beancode-frontend-nextjs
-            mkdir -p logs
+          debug: true
+          command: |
+            cd /home/beancode/beancode-frontend-nextjs && \
+            mkdir -p logs && \
             npm run build
 
       - name: Restart PM2
-        uses: appleboy/ssh-action@v0.1.10
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           timeout: 60s
           command_timeout: 60s
-          script: |
-            cd /home/beancode/beancode-frontend-nextjs
-            pm2 restart beancode-frontend-nextjs || pm2 start pm2.config.cjs
+          debug: true
+          command: |
+            cd /home/beancode/beancode-frontend-nextjs && \
+            (pm2 restart beancode-frontend-nextjs || pm2 start pm2.config.cjs) && \
             pm2 status
