--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,63 +8,43 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Update code on server
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          timeout: 60s
-          command_timeout: 60s
-          debug: true
-          command: |
-            cd /home/beancode/beancode-frontend-nextjs && \
-            git fetch origin main && \
-            git reset --hard origin/main
-
       - name: Install dependencies
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          timeout: 300s
-          command_timeout: 300s
-          debug: true
-          command: |
-            cd /home/beancode/beancode-frontend-nextjs && \
-            npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Build project
-        uses: appleboy/ssh-action@v1.0.3
+        run: npm run build
+
+      - name: Deploy to server
+        if: success()
+        uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          timeout: 300s
-          command_timeout: 300s
-          debug: true
-          command: |
-            cd /home/beancode/beancode-frontend-nextjs && \
-            mkdir -p logs && \
+          script: |
+            set -e 
+            cd /home/beancode/beancode-frontend-nextjs
+
+            # Обновляем код
+            git fetch origin main
+            git reset --hard origin/main
+
+            # Устанавливаем зависимости
+            npm ci
+
+            # Создаем папку для логов если не существует
+            mkdir -p logs
+
+            # Собираем проект
             npm run build
 
-      - name: Restart PM2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          timeout: 60s
-          command_timeout: 60s
-          debug: true
-          command: |
-            cd /home/beancode/beancode-frontend-nextjs && \
-            (pm2 restart beancode-frontend-nextjs || pm2 start pm2.config.cjs) && \
+            # Перезапускаем PM2 процесс
+            pm2 restart beancode-frontend-nextjs || pm2 start pm2.config.cjs
+
+            # Проверяем статус
             pm2 status
